--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1814,6 +1814,21 @@ header .navItem {
     height: 500%;
   }
 }
+@media (max-width: 495px) {
+  .preview-header-txt h1 {
+    font-size: 35px;
+  }
+  .preview-header-txt p {
+    font-size: 16px;
+  }
+
+  .preview h2 {
+    font-size: 25px;
+  }
+  .preview p, .preview ol {
+    font-size: 16px;
+  }
+}
 .menu-editor {
   box-shadow: 0 10px 15px -2px #80808030;
   border-bottom-left-radius: 10px;
