i18 for all pages and logo update

--- a/public/styles/components/_adminLayout.scss
+++ b/public/styles/components/_adminLayout.scss
@@ -26,6 +26,7 @@
         justify-content: center;
 
         a {
+            text-transform: capitalize;
             padding: 1.9rem 1.9rem;
             margin-top: 1rem;
             border-top-left-radius: 10px;
