--- a/public/styles/components/blog/_menuEditor.scss
+++ b/public/styles/components/blog/_menuEditor.scss
@@ -32,6 +32,7 @@
         align-items: center;
 
         .editor-text-button {
+            text-transform: capitalize;
             padding: 1.9rem 10px;
             color: #4976ED;
             text-align: end;
