--- a/public/styles/media.scss
+++ b/public/styles/media.scss
@@ -53,7 +53,8 @@
     .navItems {
       flex-direction: column;
       width: 100%;
-
+      padding-top: 2rem;
+      
       .navItem {
         padding: 1rem;
       }
