--- a/components/header.module.css
+++ b/components/header.module.css
@@ -37,7 +37,13 @@
   line-height: 1.3rem;
 }
 
+.signedInText small {
+  text-transform: capitalize;
+}
+
 .signedInText {
+  text-transform: capitalize;
+
   padding-top: 0rem;
   left: 4.6rem;
 }
