--- a/public/styles/components/_header.scss
+++ b/public/styles/components/_header.scss
@@ -32,6 +32,7 @@ header {
             align-items: center;
 
             a {
+                text-transform: capitalize;
                 font-size: 20px;
             }
 
@@ -71,7 +72,7 @@ header {
         position: absolute;
         padding-top: .8rem;
         left: 1rem;
-        right: 6.5rem;
+        right: 10rem;
         white-space: nowrap;
         text-overflow: ellipsis;
         overflow: hidden;
