--- a/public/styles/components/blog/_preview.scss
+++ b/public/styles/components/blog/_preview.scss
@@ -89,6 +89,7 @@
     align-items: center;
 
     h1 {
+        text-transform: capitalize;
         font-size: 54px;
         font-family: 'New York Extra Large', sans-serif;
         max-width: 800px;
@@ -98,6 +99,7 @@
     }
 
     p {
+        text-transform: capitalize;
         font-size: 20px;
         max-width: 620px;
         text-align: center;
