--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -1,4 +1,4 @@
-@import url('http://fonts.cdnfonts.com/css/new-york-extra-large');
+@import url('https://fonts.cdnfonts.com/css/new-york-extra-large');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&display=swap');
 
 @import 'base.scss';
