--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -25,5 +25,6 @@
 @import 'components/blog/postForm.scss';
 @import 'components/blog/toolbar.scss';
 @import 'components/blog/posts.scss';
+@import 'components/optionsList.scss';
 
 @import './media.scss';
