--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -26,5 +26,6 @@
 @import 'components/blog/toolbar.scss';
 @import 'components/blog/posts.scss';
 @import 'components/optionsList.scss';
+@import 'components/gallery.scss';
 
 @import './media.scss';
