--- a/public/styles/components/blog/_menuEditor.scss
+++ b/public/styles/components/blog/_menuEditor.scss
@@ -14,8 +14,10 @@
     padding: 0 7.9%;
 
     .menu-close{
+        padding: 0;
         border-radius: 5px;
-        padding: 15px 1.9rem;
+        width: 69px;
+        height: 40px;
     }
 
     .wand {
@@ -32,6 +34,7 @@
         align-items: center;
 
         .editor-text-button {
+            flex-grow: 0.1;
             text-transform: capitalize;
             padding: 1.9rem 10px;
             color: #4976ED;
